--- a/airbyte-integrations/connectors/destination-tapfiliate/Dockerfile
+++ b/airbyte-integrations/connectors/destination-tapfiliate/Dockerfile
@@ -7,12 +7,12 @@ WORKDIR /airbyte/integration_code
 # upgrade pip to the latest version
 RUN apk --no-cache upgrade \
     && pip install --upgrade pip \
-    && apk --no-cache add tzdata build-base
-
+    && apk --no-cache add tzdata build-base libffi-dev
 
 COPY setup.py ./
-# install necessary packages to a temporary folder
-RUN pip install --prefix=/install .
+
+# Install necessary packages to a temporary folder with debug output
+RUN pip install --prefix=/install . 
 
 # build a clean environment
 FROM base
