--- a/airbyte-integrations/connectors/destination-partnerstack/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/destination-partnerstack/sample_files/configured_catalog.json
@@ -2,7 +2,7 @@
     "streams": [
         {
             "stream": {
-                "name": "airbyte_table_transaction",
+                "name": "customer_stream",
                 "supported_sync_modes": [
                     "incremental"
                 ],
@@ -17,34 +17,6 @@
                             "type": "integer"
                         },
                         "currency": {
-                            "type": "string"
-                        },
-                        "metadata": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "sync_mode": "incremental",
-            "destination_sync_mode": "append"
-        },
-        {
-            "stream": {
-                "name": "airbyte_table_customer",
-                "supported_sync_modes": [
-                    "incremental"
-                ],
-                "source_defined_cursor": false,
-                "json_schema": {
-                    "type": "object",
-                    "properties": {
-                        "customer_key": {
-                            "type": "string"
-                        },
-                        "email": {
-                            "type": "string"
-                        },
-                        "partner_key": {
                             "type": "string"
                         },
                         "metadata": {
