--- a/airbyte-integrations/connectors/destination-partnerstack/pyproject.toml
+++ b/airbyte-integrations/connectors/destination-partnerstack/pyproject.toml
@@ -16,7 +16,7 @@ packages = [ { include = "destination_partnerstack" }, {include = "main.py" } ]
 
 [tool.poetry.dependencies]
 python = "^3.9,<3.12"
-airbyte-cdk = "^0"
+airbyte-cdk = "==0.68.1"
 requests = "^2.32.3"
 
 [tool.poetry.scripts]
