--- a/airbyte-integrations/connectors/destination-partnerstack/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/destination-partnerstack/sample_files/configured_catalog.json
@@ -2,30 +2,40 @@
     "streams": [
         {
             "stream": {
-                "name": "customer_stream",
-                "supported_sync_modes": [
-                    "incremental"
-                ],
-                "source_defined_cursor": false,
+                "name": "partnership_stream",
                 "json_schema": {
                     "type": "object",
                     "properties": {
-                        "customer_key": {
+                        "fields": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "properties": {
+                                    "api_name": {
+                                        "type": "string"
+                                    },
+                                    "value": {}
+                                },
+                                "required": [
+                                    "api_name",
+                                    "value"
+                                ]
+                            }
+                        },
+                        "run_dbt_date": {
                             "type": "string"
-                        },
-                        "amount": {
-                            "type": "integer"
-                        },
-                        "currency": {
-                            "type": "string"
-                        },
-                        "metadata": {
-                            "type": "object"
                         }
-                    }
-                }
+                    },
+                    "required": [
+                        "fields"
+                    ]
+                },
+                "supported_sync_modes": [
+                    "full_refresh",
+                    "incremental"
+                ]
             },
-            "sync_mode": "incremental",
+            "sync_mode": "full_refresh",
             "destination_sync_mode": "append"
         }
     ]
